tools/transform 	 svg icon should not be draggable fixes issue with chrome draggin behavoir tools/eraser2          throttle eraser to 100ms tools/board.html tools/board.js tools/board.css 	added an activity monitor so people can see if there is something going on off screen

--- a/client-data/board.css
+++ b/client-data/board.css
@@ -240,6 +240,42 @@ html, body, svg {
 
 }
 
+
+#compass {
+	position:fixed;
+	bottom:10px;
+	right:10px;
+	display:none;
+	width:52px;
+	height:40px;
+}
+
+#compass .direction {
+	position:absolute;
+	width:16px;
+	height:16px;
+}
+
+#compass #north{
+	left:16px;
+	top:0px;
+}
+
+#compass #east{
+	left:36px;
+	top:12px;
+}
+
+#compass #south{
+	left:16px;
+	top:24px;
+}
+
+#compass #west{
+	left:0px;
+	top:12px;
+}
+
 #canvas input {
 	font-size:16px;
 }
